--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
     data-filter-item
     data-category="web development"
     data-images="./assets/images/project-1.jpg, ./assets/images/project-1-2.jpg, ./assets/images/project-1-3.jpg"
-    data-description="Servis-M için hazırlanan kurumsal web sitesi. Randevu sistemi, responsive tasarım ve hızlı yüklenme odaklı geliştirildi.">
+    data-description="Corporate website prepared for Servis-M. Developed with focus on products, services, responsive design and fast loading.">
   <a href="#" class="project-link">
     <figure class="project-img">
       <div class="project-item-icon-box">
@@ -644,7 +644,7 @@
     data-filter-item
     data-category="web development"
     data-images="./assets/images/project-2.jpg, ./assets/images/project-2-2.jpg, ./assets/images/project-2-3.jpg"
-    data-description="Hackxana için hazırlanan etkinlik yönetim platformu. Kullanıcı dostu arayüz ve etkinlik takibi özellikleri içerir.">
+    data-description="A cybersecurity documentary viewing platform designed for Hackxana. It includes a user-friendly interface and activity tracking features.">
   <a href="#" class="project-link">
     <figure class="project-img">
       <div class="project-item-icon-box">
