--- a/index.html
+++ b/index.html
@@ -114,19 +114,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.github.com/hasandamirli" class="social-link">
+            <a href="https://github.com/hasandamirli" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.linkedin.com/in/hasandamirli" class="social-link">
+            <a href="https://linkedin.com/in/hasan-damirli" class="social-link">
               <ion-icon name="logo-linkedin"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="https://instagram.com/hasandmrli" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
